# hdbc-odbc

./: CONTRIBUTORS  HDBC-odbc.cabal  LICENSE  Makefile  README.md  README.txt  Setup.hs  changelog.txt  hdbc-odbc-helper.c  hdbc-odbc-helper.h  shell.nix  stack-lts-11.yaml  stack-lts-13.yaml  stack-lts-6.yaml  stack-lts-9.yaml  stack.yaml
.circleci/: config.yml
Database/HDBC/: ODBC.hs
Database/HDBC/ODBC/: Connection.hsc  ConnectionImpl.hs  Log.hs  Statement.hsc  TypeConv.hsc  Types.hs  Utils.hs  Utils.hsc  Wrappers.hs
Database/HDBC/ODBC/Api/: Errors.hs  Imports.hsc  Types.hsc
cbits/: hdbc-odbc-helper.c  hdbc-odbc-helper.h
debian/: changelog  control  copyright
stresstest/: stresstest.hs
testsrc/: SpecificDB.hs  SpecificDBTests.hs  TestMisc.hs  TestSbasics.hs  Testbasics.hs  Tests.hs
