Name: HDBC-odbc
Version: 2.3.1.0
Cabal-Version: >=1.2.3
Build-type: Simple
License: BSD3
Maintainer: Nicolas Wu <nick@well-typed.com>
Author: John Goerzen
Copyright: Copyright (c) 2005-2011 John Goerzen
license-file: LICENSE
extra-source-files: LICENSE, hdbc-odbc-helper.h,
                    Makefile,
                    README.txt,
                    TODO,
                    testsrc/TestTime.hs
homepage: http://software.complete.org/hdbc-odbc
Category: Database
synopsis: ODBC driver for HDBC
Description: This package provides an ODBC database backend for HDBC.
 It is cross-platform and supports unixODBC on Unix/Linux/POSIX platforms
 and Microsoft ODBC on Windows.  It is also the preferred way to access
 MySQL databases from Haskell.
Stability: Beta

Flag buildtests
  description: Build the executable to run unit tests
  default: False

Library
  Exposed-Modules: Database.HDBC.ODBC
  Other-Modules: Database.HDBC.ODBC.Connection,
    Database.HDBC.ODBC.Statement,
    Database.HDBC.ODBC.Types,
    Database.HDBC.ODBC.Utils,
    Database.HDBC.ODBC.TypeConv,
    Database.HDBC.ODBC.ConnectionImpl
  Extensions: 
    ExistentialQuantification,
    ForeignFunctionInterface,
    ScopedTypeVariables
  Build-Depends: base >= 4.3.1.0 && < 5
               , mtl
               , HDBC>=2.1.0
               , time>=1.2.0.3
               , utf8-string
               , bytestring
  GHC-Options: -O2
  C-Sources: hdbc-odbc-helper.c
  if os(mingw32) || os(win32)
    Extra-Libraries: odbc32
  else
    Extra-Libraries: odbc
  include-dirs: .
  -- extra-lib-dirs: 

Executable runtests
  if flag(buildtests)
    Buildable: True
    Build-Depends: HUnit, QuickCheck, testpack, containers, old-time,
                   time, old-locale, convertible
  else
    Buildable: False
  Main-Is: runtests.hs
  Other-Modules: Database.HDBC.ODBC,
    Database.HDBC.ODBC.Connection,
    Database.HDBC.ODBC.Statement,
    Database.HDBC.ODBC.Types,
    Database.HDBC.ODBC.Utils,
    Database.HDBC.ODBC.TypeConv,
    Database.HDBC.ODBC.ConnectionImpl
    SpecificDB,
    SpecificDBTests,
    TestMisc,
    TestSbasics,
    TestUtils,
    Testbasics,
    Tests
  Hs-Source-Dirs: ., testsrc
  C-Sources: hdbc-odbc-helper.c
  if os(mingw32) || os(win32)
    Extra-Libraries: odbc32
  else
    Extra-Libraries: odbc
  include-dirs: .
  GHC-Options: -O2
  Extensions: 
    ExistentialQuantification,
    ForeignFunctionInterface,
    PatternSignatures
